fix intervals overlap and make restart work fine

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 /* Dark theme default */
 body {
-  background-color: #121212;
+  background-color: rgb(18, 15, 15);
+  /* background: radial-gradient(rgb(41, 41, 52), black); */
   color: #e0e0e0;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -69,6 +70,12 @@ header h1 {
   height: calc(1.8em * 3);  /* exactly 3 lines */
   overflow: hidden;         /* hide extra */
   position: relative;
+  border: none;
+  background: transparent;
+}
+
+#playground:focus{
+  outline: none;
 }
 
 #words-container {
